--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	
       
     <nav>
-        <ul>
+        <ul id="role">
             <li>naruto</li>
             <li>genin</li>
             <li>hokage</li>
